# headless-wagtail-form-backend

./: .flake8  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini
contact_form_prototype/: schema.py  urls.py  wsgi.py
contact_form_prototype/settings/: base.py  dev.py
contact_form_prototype/templates/: base.html
content/: models.py
content/migrations/: 0001_initial.py  0002_contentpage_contact_form.py  0003_auto_20200929_0125.py  0004_form_to_page_back_relation.py
forms/: models.py  schema.py  test.py  tests.py
forms/migrations/: 0001_initial.py  0002_auto_20200923_2346.py
forms/templates/forms/: form_page.html
